<resources>
    <!-- MAIN -->
    <string name="app_name" translatable="false">KillerDealer</string>
    <string name="reload_toast">Reset</string>
    <string name="play_toast">Playing!</string>
    <string name="pause_toast">Pause</string>
    <string name="rise_done_toast">"Blinds risen: "</string>
    <string name="rebuy_end_toast">Rebuy ended!</string>
    <string name="iv_reload_desc">Reload button</string>
    <string name="iv_play_pause_desc">Play/pause button</string>
    <string name="iv_blind_prev_desc">Previous blind</string>
    <string name="iv_blind_next_desc">Next blind</string>
    <string name="iv_rise_reload_desc">Rise time reload</string>
    <string name="iv_rebuy_reload_desc">Rebuy time reload</string>

    <!-- SESSION -->
    <string name="status_pref" translatable="false">status-pref</string>
    <string name="last_play_time_pref" translatable="false">last-play-time-pref</string>
    <string name="rebuy_timer_pref" translatable="false">rebuy-timer-pref</string>
    <string name="pause_rise_time_pref" translatable="false">paused-rise-time-pref</string>
    <string name="pause_rebuy_time_pref" translatable="false">paused-rebuy-time-pref</string>
    <string name="blind_pos_pref" translatable="false">blins-pos-pref</string>

    <!-- BLINDS CONFIG -->
    <string name="rebuy_title">Rebuy</string>
    <string name="rise_title">Rise</string>
    <string name="blinds_title">Blinds</string>
    <string name="blind_added">Blind added</string>
    <string name="blind_deleted">Blind deleted!</string>
    <string name="iv_blind_small_desc">Small blind chip</string>
    <string name="iv_blind_big_desc">Big blind chip</string>
    <string name="hh">H</string>
    <string name="mm">M</string>
    <string name="dialog_add_title">Add</string>
    <string name="dialog_update_title">Update</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- SETTINGS -->
    <string name="settings_title">Settings</string>
    <string name="general_pref_title">General</string>
    <string name="general_screen_key" translatable="false">general_screen_key</string>
    <string name="general_screen_text">Screen</string>
    <string name="summary_screen_on_pref">Keep screen on</string>
    <string name="summary_screen_off_pref">Don\'t keep screen on</string>
    <string name="blinds_pref_title">Blinds</string>
    <string name="blinds_reset_key" translatable="false">blinds_reset_key</string>
    <string name="blinds_reset_text">Reset</string>
    <string name="blinds_summary_reset_on_pref">Reset rise timer on blind navigation</string>
    <string name="blinds_summary_reset_off_pref">Don\'t reset rise timer on blind navigation</string>
    <string name="notif_pref_title">Notifications</string>
    <string name="notif_vibrate_key" translatable="false">notif_vibrate_key</string>
    <string name="notif_vibrate_text">Vibrate</string>
    <string name="notif_sound_key" translatable="false">notif_sound_key</string>
    <string name="notif_sound_text">Sound</string>
    <string name="notif_toast_key" translatable="false">notif_toast_key</string>
    <string name="notif_toast_text">Toast</string>
    <string name="summary_on_pref">On</string>
    <string name="summary_off_pref">Off</string>

    <!-- ABOUT -->
    <string name="about_title">About</string>
    <string name="about_contact_title">Contact</string>
    <string name="about_mail_to" translatable="false">choke84@gmail.com</string>
    <string name="about_mail_subject">Contact from KillerDealer</string>
    <string name="about_collaborate_title">Collaborate</string>
    <string name="about_github_uri" translatable="false">https://github.com/chokethenet/KillerDealer</string>
    <string name="about_logo_desc">App logo</string>
    <string name="about_mail_desc">e-mail logo</string>
    <string name="about_github_desc">GitHub logo</string>

    <!-- RULES -->
    <string name="rules_title">Rules</string>
    <string name="rules_A" translatable="false">A</string>
    <string name="rules_2" translatable="false">2</string>
    <string name="rules_3" translatable="false">3</string>
    <string name="rules_4" translatable="false">4</string>
    <string name="rules_5" translatable="false">5</string>
    <string name="rules_6" translatable="false">6</string>
    <string name="rules_7" translatable="false">7</string>
    <string name="rules_8" translatable="false">8</string>
    <string name="rules_9" translatable="false">9</string>
    <string name="rules_10" translatable="false">10</string>
    <string name="rules_J" translatable="false">J</string>
    <string name="rules_Q" translatable="false">Q</string>
    <string name="rules_K" translatable="false">K</string>
    <string name="rules_royal_flush">1. Royal flush</string>
    <string name="rules_straight_flush">2. Straight flush</string>
    <string name="rules_four_kind">3. Four of a kind</string>
    <string name="rules_full_house">4. Full house</string>
    <string name="rules_flush">5. Flush</string>
    <string name="rules_straight">6. Straight</string>
    <string name="rules_three_kind">7. Three of a kind</string>
    <string name="rules_two_pair">8. Two pair</string>
    <string name="rules_one_pair">9. One pair</string>
</resources>
