<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.chokethe.killerdealer.config.ConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- REBUY -->
            <TextView
                android:id="@+id/config_tv_rebuy_time_title"
                style="@style/KillerDealer.Text.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large"
                android:layout_marginStart="@dimen/large"
                android:layout_marginTop="@dimen/medium"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/rebuy_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/config_tv_rebuy_hours"
                style="@style/KillerDealer.Text.smallNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/config_tv_rebuy_hh"
                app:layout_constraintRight_toLeftOf="@+id/config_tv_rebuy_hh"
                app:layout_constraintTop_toTopOf="@+id/config_tv_rebuy_hh"
                tools:text="3" />

            <TextView
                android:id="@+id/config_tv_rebuy_hh"
                style="@style/KillerDealer.Text.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginTop="0dp"
                android:text="@string/hh"
                app:layout_constraintBottom_toBottomOf="@+id/config_tv_rebuy_minutes"
                app:layout_constraintRight_toLeftOf="@+id/config_tv_rebuy_minutes"
                app:layout_constraintTop_toTopOf="@+id/config_tv_rebuy_minutes" />

            <TextView
                android:id="@+id/config_tv_rebuy_minutes"
                style="@style/KillerDealer.Text.smallNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/config_tv_rebuy_mm"
                app:layout_constraintRight_toLeftOf="@+id/config_tv_rebuy_mm"
                app:layout_constraintTop_toTopOf="@+id/config_tv_rebuy_mm"
                tools:text="00" />

            <TextView
                android:id="@+id/config_tv_rebuy_mm"
                style="@style/KillerDealer.Text.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large"
                android:layout_marginRight="@dimen/large"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/mm"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- BLINDS & RISE -->
            <TextView
                android:id="@+id/config_tv_blind_title"
                style="@style/KillerDealer.Text.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large"
                android:layout_marginStart="@dimen/large"
                android:layout_marginTop="@dimen/medium"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/blinds_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/config_tv_rebuy_time_title" />

            <TextView
                android:id="@+id/config_tv_rise_time_title"
                style="@style/KillerDealer.Text.title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/large"
                android:layout_marginRight="@dimen/large"
                android:text="@string/rise_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/config_tv_blind_title" />
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/config_rv_blinds"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/config_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/medium"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add" />

</FrameLayout>
