<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.chokethe.killerdealer.TimersConfigActivity">

    <TextView
        android:id="@+id/tv_rise_config"
        android:text="@string/rise_title"
        style="@style/KillerDealer.Text.title"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <NumberPicker
        android:id="@+id/np_rise_mm_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_rise_config"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@+id/tv_rise_mm"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/tv_rise_mm"
        android:text="@string/mm"
        style="@style/KillerDealer.Text.title"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/np_rise_mm_config"
        app:layout_constraintTop_toTopOf="@+id/np_rise_mm_config"
        app:layout_constraintRight_toLeftOf="@+id/np_rise_ss_config"
        android:layout_marginRight="8dp" />

    <NumberPicker
        android:id="@+id/np_rise_ss_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_rise_mm"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rise_mm"
        android:layout_marginBottom="0dp"
        app:layout_constraintRight_toLeftOf="@+id/tv_rise_ss"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/tv_rise_ss"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/ss"
        style="@style/KillerDealer.Text.title"
        app:layout_constraintBottom_toBottomOf="@+id/np_rise_ss_config"
        app:layout_constraintTop_toTopOf="@+id/np_rise_ss_config"
        android:layout_marginRight="44dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_rebuy_config"
        android:text="@string/rebuy_title"
        style="@style/KillerDealer.Text.title"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_rise_config"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/np_rise_mm_config" />










    <NumberPicker
        android:id="@+id/np_rebuy_ss_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_rebuy_mm"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rebuy_mm"
        android:layout_marginBottom="0dp"
        app:layout_constraintRight_toLeftOf="@+id/tv_rebuy_ss"
        android:layout_marginRight="8dp" />

    <NumberPicker
        android:id="@+id/np_rebuy_hh_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/tv_rebuy_hh"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/tv_rebuy_config"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_rebuy_hh"
        android:text="@string/hh"
        style="@style/KillerDealer.Text.title"
        app:layout_constraintRight_toLeftOf="@+id/np_rebuy_mm_config"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/np_rebuy_hh_config"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/np_rebuy_hh_config"
        android:layout_marginBottom="0dp" />

    <NumberPicker
        android:id="@+id/np_rebuy_mm_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_rebuy_hh"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rebuy_hh"
        android:layout_marginBottom="0dp"
        app:layout_constraintRight_toLeftOf="@+id/tv_rebuy_mm"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/tv_rebuy_mm"
        android:text="@string/mm"
        style="@style/KillerDealer.Text.title"
        app:layout_constraintRight_toLeftOf="@+id/np_rebuy_ss_config"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/np_rebuy_mm_config"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/np_rebuy_mm_config"
        android:layout_marginBottom="0dp" />


    <TextView
        android:id="@+id/tv_rebuy_ss"
        android:text="@string/ss"
        style="@style/KillerDealer.Text.title"
        app:layout_constraintTop_toTopOf="@+id/np_rebuy_ss_config"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/np_rebuy_ss_config"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="44dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
