<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.chokethe.killerdealer.MainActivity">

    <!-- BLINDS -->
    <TextView
        android:id="@+id/tv_blind_title"
        style="@style/KillerDealer.Text.title"
        android:text="@string/blinds_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/iv_blind_small"
        style="@style/KillerDealer.Image.circle"
        app:srcCompat="@drawable/circle"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@+id/tv_blind_title"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_blind_small"
        style="@style/KillerDealer.Text.number"
        tools:text="10"
        app:layout_constraintBottom_toBottomOf="@+id/iv_blind_small"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_blind_small"
        app:layout_constraintTop_toTopOf="@+id/iv_blind_small"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/iv_blind_small" />

    <ImageView
        android:id="@+id/iv_blind_big"
        style="@style/KillerDealer.Image.circle"
        app:srcCompat="@drawable/circle"
        app:layout_constraintTop_toTopOf="@+id/iv_blind_small"
        android:layout_marginTop="0dp"
        android:layout_marginRight="44dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_blind_big"
        style="@style/KillerDealer.Text.number"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_blind_big"
        app:layout_constraintLeft_toLeftOf="@+id/iv_blind_big"
        app:layout_constraintRight_toRightOf="@+id/iv_blind_big"
        app:layout_constraintTop_toTopOf="@+id/iv_blind_big"
        tools:text="20" />

    <!-- RISE -->
    <TextView
        android:id="@+id/tv_rise_title"
        android:text="@string/rise_title"
        style="@style/KillerDealer.Text.title"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_blind_small"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_blind_small" />

    <TextView
        android:id="@+id/tv_rise_timer"
        style="@style/KillerDealer.Text.number"
        tools:text="15:00"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_rise_title"
        app:layout_constraintTop_toTopOf="@+id/tv_rise_title"
        android:layout_marginTop="12dp" />

    <!-- REBUY -->
    <TextView
        android:id="@+id/tv_rebuy_title"
        android:text="@string/rebuy_title"
        style="@style/KillerDealer.Text.title"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_rise_timer"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_rise_timer" />

    <TextView
        android:id="@+id/tv_rebuy_timer"
        style="@style/KillerDealer.Text.number"
        tools:text="2:00:00"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_rebuy_title"
        app:layout_constraintTop_toTopOf="@+id/tv_rebuy_title"
        android:layout_marginTop="12dp" />

    <!-- CONTROLS -->
    <ImageView
        android:id="@+id/iv_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_reload" />

    <ImageView
        android:id="@+id/iv_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_play"
        android:layout_marginRight="44dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />


</android.support.constraint.ConstraintLayout>
